# hack-europe

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  main.py  mock_linkedin_connections.csv  package.json  pyproject.toml  render.yaml  salesforge.db
backend/: analytics.py  api_keys.py  auth.py  billing.py  config.py  db.py  encryption.py  main.py  models.py
backend/actions/: email_generator.py  pitch_deck.py
backend/agent/: orchestrator.py
backend/discovery/: __init__.py  discovery_pipeline.py  icp_agent.py  prompts.py
backend/enrichment/: claude_enricher.py  linkup_search.py  pipeline.py
backend/icp/: customer_research.py  icp_extractor.py  icp_pipeline.py
backend/linkedin/: csv_parser.py  matching.py  mock_data.py  outreach_generator.py  pipeline.py
backend/matching/: pipeline.py
backend/tests/: conftest.py  test_auth.py  test_discovery.py  test_email.py  test_enrichment.py  test_leads.py  test_linkedin.py  test_matching.py  test_orchestrator.py  test_pipeline.py  test_pitch_deck.py  test_products.py  test_query_planner.py  test_search_executor.py
docs/: architecture.md  backend-tracker.md  frontend-pitch-tracker.md  linkup-prompts-tracker.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Analytics.tsx  AuthContext.tsx  (+13 more)
prompts/: discovery_prompt.py  email_prompt.py  extraction_prompt.py  matching_prompt.py  pitch_deck_prompt.py  query_planner_prompt.py  test_discovery.py  test_runner.py
templates/: pitch_deck.html
(+15 files in other folders)
