[project]
name = "hack-europe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.83.0",
    "fastapi>=0.129.1",
    "jinja2>=3.1.6",
    "linkup-sdk>=0.12.0",
    "python-multipart>=0.0.22",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.35",
    "uvicorn[standard]>=0.41.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]
